minor formatting in the guide

--- a/def.tex
+++ b/def.tex
@@ -8,8 +8,8 @@
 
 % SPECIAL TO ITDR-CORE-GUIDE
 
-\newindex{spells}{Spell List}
-\def \bestiaryIndex {bestiary}
+\newindex{\spells}{Spell List}
+\def\bestiaryIndex{bestiary}
 \newindex{bestiary}{Bestiary}
 
 \usepackage{listings}
