--- a/part1.tex
+++ b/part1.tex
@@ -307,15 +307,9 @@ Background description.
 
 \subsection{Spells}
 
-Default spell index is defined as:
-\begin{lstlisting}
-\def \spells {spells}
-\end{lstlisting}
+Default spell index is defined as\\\fbox{\lstinline!\\def\\spells\{spells\}!}.
 
-%
-% Define:
-%	\newindex{spells}{Spell List}
-% before the start of your document.
+\noindent Define \fbox{\lstinline!\\newindex\{\\spells\}\{Spell List\}!}\\before the start of your document.
 
 \section{\nth{1} Circle}
 \index{Spells!\nth{1} Circle}
@@ -832,7 +826,7 @@ New environment (around \lstinline!wrapfloat!):
 \break
 
 The default \lstinline!\graphicspath! is:\\
-\fbox{\lstinline!\{./img/\} \{./img/pic/\} \{./pic/\} \{./core/img/\}!}\\
+\fbox{\lstinline!\{./img/\} \{./img/pic/\} \{./pic/\} \{./itdr/img/\}!}\\
 
 \vspace{-0.5ex}
 \begin{lstlisting}
