--- a/core.sty
+++ b/core.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{itdr/core}[2023/12/01]
+\ProvidesPackage{itdr/core}[2023/12/18]
 
 \RequirePackage{comment}
 \RequirePackage[inner=1in,outer=1in,top=1.36in,bottom=1.36in,footskip=0.3in]{geometry}
@@ -669,16 +669,25 @@
 	[0em]% left
 	{\vspace{1pc}\bfseries}% above-code
 	{\makebox[\tocstep][l]{\thecontentslabel}}% numbered-entry-format
-	{\makebox[\tocstep][l]{}}% numberless-entry-format
+	{\makebox[0\tocstep][l]{}}% numberless-entry-format
 	{\cftchapleader\quad\contentspage}% filler-page-format
 	[]% below-code
 
 % unnumbered chapter
-\newcommand{\chapterx}[1]{%
+\makeatletter
+\newcommand{\chapterx}{\@ifstar{\chapterx@star}{\chapterx@toc}}
+
+\newcommand{\chapterx@toc}[1]{%
 	\chapter*{#1}
-	\markboth{#1}{}
+	\markboth{#1}{}%
 	\addcontentsline{toc}{chapter}{#1}%
 }
+
+\newcommand{\chapterx@star}[1]{%
+	\chapter*{#1}
+	\markboth{#1}{}%
+}
+\makeatother
 
 % section
 \titleformat{\section}
