--- a/core.sty
+++ b/core.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{itdr/core}[2023/12/18]
+\ProvidesPackage{itdr/core}[2024/01/21]
 
 \RequirePackage{comment}
 \RequirePackage[inner=1in,outer=1in,top=1.36in,bottom=1.36in,footskip=0.3in]{geometry}
@@ -490,6 +490,7 @@
 		\begin{tikzpicture}
 			\draw (0,0) rectangle (#1,#3);
 			\node at (#1/2,#3/2) {\faImage~\detokenize\expandafter{#2}};
+			\node at (#1/2,#3/2-\baselineskip) {\faRulerVertical~\detokenize\expandafter{#3}};
 		\end{tikzpicture}
 	\end{minipage}\par%
 }
@@ -577,6 +578,8 @@
 
 \RequirePackage{enumitem}
 
+\setlist{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
+
 \makeatletter
 
 % itemize
@@ -584,7 +587,6 @@
 \renewcommand{\labelitemii}{\adfbullet{48}}
 \renewcommand{\labelitemiii}{\adfbullet{43}}
 \renewcommand{\labelitemiv}{\adfbullet{44}}
-\setitemize{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
 
 % enumerate
 \def\enum@i{\arabic{enumi}}
@@ -596,7 +598,6 @@
 \renewcommand{\labelenumii}{(\enum@ii)}
 \renewcommand{\labelenumiii}{\enum@iii.}
 \renewcommand{\labelenumiv}{(\enum@iv)}
-\setenumerate{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
 
 % \itemrange{range}
 %
