bestiary.csv - leech swarm - non-Blast attacks

--- a/part1.tex
+++ b/part1.tex
@@ -396,7 +396,7 @@ Text\note[4] \fbox{\lstinline!Text\\note[4]!}\\
 Text\note[5] \fbox{\lstinline!Text\\note[5]!}\\
 Text\note[6] \fbox{\lstinline!Text\\note[6]!}
 \end{multicols}
-\vspace{-\baselineskip}\noindent\rule{0.5\linewidth}{1pt}\vspace{1ex}\\
+\footnoterule\noindent
 \notetext[1]{Note.} \fbox{\lstinline!\\notetext[1]\{Note\}!}\\
 \notetext[2]{Note.} \fbox{\lstinline!\\notetext[2]\{Note.\}!}\\
 \notetext[3]{Note.} \fbox{\lstinline!\\notetext[3]\{Note.\}!}\\
