adjusted layout formatting

--- a/part1.tex
+++ b/part1.tex
@@ -442,7 +442,7 @@ A shortcut for the \fbox{\lstinline!\\looseness=-1!} command. When placed at the
 \begin{dbox}
 	\paragraph{Default Box}
 	CONTENTS
-\end{dbox}	
+\end{dbox}
 \end{lstlisting}
 
 \vfill
@@ -451,7 +451,7 @@ A shortcut for the \fbox{\lstinline!\\looseness=-1!} command. When placed at the
 \begin{abox}
 	\paragraph{Aloud Box}
 	Room descriptions and other material to read aloud to the players.\\
-	\lipsum[66]
+	\lipsum[66]\tight
 \end{abox}
 
 \skipline[0.5\baselineskip]
@@ -460,7 +460,7 @@ A shortcut for the \fbox{\lstinline!\\looseness=-1!} command. When placed at the
 \begin{abox}
 	\paragraph{Aloud Box}
 	CONTENTS
-\end{abox}	
+\end{abox}
 \end{lstlisting}
 
 \vfill
@@ -468,7 +468,7 @@ A shortcut for the \fbox{\lstinline!\\looseness=-1!} command. When placed at the
 \begin{qbox}
 	\paragraph{Quote Box}
 	Quotes and handouts.\\
-	\lipsum[66]
+	\lipsum[66]\tight
 \end{qbox}
 
 \skipline[0.5\baselineskip]
@@ -501,7 +501,7 @@ A shortcut for the \fbox{\lstinline!\\looseness=-1!} command. When placed at the
 
 \begin{lbar}
 	\paragraph{Left Bar}
-	\lipsum[66]
+	\lipsum[66]\tight
 \end{lbar}
 
 \skipline[0.5\baselineskip]
