--- a/core.sty
+++ b/core.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{itdr/core}[2024/01/21]
+\ProvidesPackage{itdr/core}[2024/04/12]
 
 \RequirePackage{comment}
 \RequirePackage[inner=1in,outer=1in,top=1.36in,bottom=1.36in,footskip=0.3in]{geometry}
@@ -1036,6 +1036,15 @@
 	\ignorespaces
 }
 
+\def\@ignore@paragraphs{%
+	\begingroup
+	\catcode13=10
+	\@ifnextchar\par
+	{\endgroup\expandafter\@ignore@paragraphs\@gobble}%
+	{\endgroup}%
+}
+
+
 % \room[\title]{idx}{name}
 %
 % title - (optional) title level (\subsection by default)
@@ -1045,7 +1054,7 @@
 \newcommand{\room}[3][\subsection]{%
 	\@skip@empty@lines{%
 		\lettrine[findent=0.5em,nindent=0em]{#2}{%
-			\raisebox{-0.5ex}{\parbox{\linewidth-\widthof{\Huge #2}}{#1[#2. #3]{#3}}}
+			\raisebox{-0.5ex}{\parbox{\linewidth-\widthof{\Huge #2}}{#1[#2. #3]{#3}}}\@ignore@paragraphs
 		}\\%lettrine
 	}
 }
