core.sty: lbar spacing adjustment

--- a/core.sty
+++ b/core.sty
@@ -135,6 +135,8 @@
 			topline=false,
 			bottomline=false,
 			rightline=false,
+			innertopmargin=1pt,
+			innerbottommargin=0pt,
 			]%
 		}{ % <- the space here is left intentionally
 		\end{mdframed}%
