--- a/part1.tex
+++ b/part1.tex
@@ -285,6 +285,8 @@ Background description.
 \paragraph{Red Hill --- Home of the Man-Beasts}
 \domain{Black Yur Og, Veteran Shaman}{5}{Stone walls (8hp, Armour 8), 4 Rock Throwers.\\30 Tribal Champions (2-handed axe), 300 Wild Men (axe, shield), 300 Wild Men (bow).}
 
+\skipline[0.5\baselineskip]
+
 \begin{lstlisting}
 \paragraph{Red Hill --- Home of the Man-Beasts}
 \domain{Black Yur Og, Veteran Shaman}{5}{Stone walls (8hp, Armour 8), 4 Rock Throwers.\\30 Tribal Champions (2-handed axe), 300 Wild Men (axe, shield), 300 Wild Men (bow).}
