--- a/core.sty
+++ b/core.sty
@@ -835,7 +835,7 @@
 	\vspace{0.1ex}\noindent
 	\rowcolors{1}{dColor1}{dColor2}% Alternate colors
 	\linespread{0.5}\selectfont{}% halved linespread
-	\setlength{\extrarowheight}{1.2ex}% extra vertical space at the top and bottom of each row
+	\setlength{\extrarowheight}{5pt}% extra vertical space at the top and bottom of each row
 	\tabularx{\linewidth}{#1}%
 }{\endtabularx\vspace{0.5ex}\noindent}
 
